# tphys

./: CMakeLists.txt  Makefile  README.md  shell.nix
.direnv/: nix-profile-25.11-cy6cvjfw0729jx30  nix-profile-25.11-cy6cvjfw0729jx30.rc
include/Core/: Clock.hpp  Console.hpp  Object.hpp  Scene.hpp  Shape.hpp
include/Geometry/: Angle.hpp  Point.hpp  Vector.hpp
include/Physics/: Physics.hpp
include/Rendering/: Camera.hpp  Renderer.hpp
include/core/: Object.hpp  World.hpp
include/geometry/: Angle.hpp  Circle.hpp  Line.hpp  Polygon.hpp  Shape.hpp  Vector2D.hpp
include/rendering/: Camera.hpp  Renderer.hpp
src/: main.cpp
src/Core/: Clock.cpp  Console.cpp  Object.cpp  Physics.cpp  Scene.cpp
src/Geometry/: Vector.cpp
src/Rendering/: Camera.cpp  Renderer.cpp
src/geometry/: Angle.cpp  Vector2D.cpp
src/rendering/: Renderer.cpp
tests/: test_Angle.cpp
